tests/snapshots/run_wpt_conformance__onnx_logicalNot_uint8_5D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "logical_not.https.any.js",
    "logicalNot uint8 5D tensor",
    "onnx",
    "PASS",
)
