tests/snapshots/run_wpt_conformance__onnx_logicalOr_uint8_1D_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "logical_or.https.any.js",
    "logicalOr uint8 1D tensors",
    "onnx",
    "PASS",
)
